--- a/src/styles.css
+++ b/src/styles.css
@@ -28,10 +28,14 @@ nav {
 }
 
 .nav-link {
-    background-color: white;
-    opacity: calc(.5);
-    border-radius: 50%;
+    /* background-color: white; */
+    background-image: url(../public/images/nav/champion-belt-1409991-1193016.png);
+    background-size: 5em;
+    background-position: center;
+    /* opacity: calc(.5);
+    border-radius: 50%; */
     margin-left: 2%;
+    width: 4em;
 }
 
 .banner {
